# model_base

./: README.md  acustic_optimized.tflite  recognition_model_model.tflite  sine_model.tflite  speec_rec_float_model.tflite  speech_rec.tflite  tf_lite_ae_v2.tflite  tf_lite_model.tflite  tflite_model_quant_weight_bias.tflite
esp-32-example/AE_unquantized/: CMakeLists.txt  README.md  sdkconfig
esp-32-example/AE_unquantized/main/: AE_unquantized.ino  CMakeLists.txt  arduino_constants.cpp  main.cc  main_functions.cc  model.cpp
esp-32-example/micro_speech_modified/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp-32-example/micro_speech_modified/main/: CMakeLists.txt  audio_provider.cc  feature_provider.cc  main.cc  main_functions.cc  micro_features_generator.cc  micro_model_settings.h  no_micro_features_data.cc  recognize_commands.h  ringbuf.c  ringbuf.h  yes_micro_features_data.cc
